--- a/index.html
+++ b/index.html
@@ -213,10 +213,7 @@
                   <div class="tm-underline-inner"></div>
                 </div>
                 <p class="mb-5">
-                  Nullam tincidunt, lacus a suscipit luctus, elit turpis tincidunt dui,
-                  non tempus sem turpis vitae lorem. Maecenas eget odio in sapien ultrices
-                  viverra vitae vel leo. Curabitur at elit eu risus pharetra pellentesque
-                  at at velit.
+                  I have changed this part!
                 </p>
             </div>
             
