--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <h2 class="tm-text-primary mb-4 tm-section-title">Introduction</h2>
                 <p class="mb-4 tm-intro-text">
                   Our application could provide sentiment analysis for your customized words based on <strong>pre-trained machine learning and deep learning models.</strong>
-                  The result is returned as 3 categories, positive, neutral and negative.
+                  The result is returned as 3 categories, positive, neutral and negative. I changed this this this !!!!!
               </p>
                 <p class="mb-5 tm-intro-text">
                   Our application is built with Flask framework and deployed on 
