--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <h2 class="tm-text-primary mb-4 tm-section-title">Introduction</h2>
                 <p class="mb-4 tm-intro-text">
                   Our application could provide sentiment analysis for your customized words based on <strong>pre-trained machine learning and deep learning models.</strong>
-                  The result is returned as 3 categories, positive, neutral and negative. I changed this this this !!!!!
+                  The result is returned as 3 categories, positive, neutral and negative. I have changed this!!!!
               </p>
                 <p class="mb-5 tm-intro-text">
                   Our application is built with Flask framework and deployed on 
@@ -213,7 +213,10 @@
                   <div class="tm-underline-inner"></div>
                 </div>
                 <p class="mb-5">
-                  I have changed this part!
+                  Nullam tincidunt, lacus a suscipit luctus, elit turpis tincidunt dui,
+                  non tempus sem turpis vitae lorem. Maecenas eget odio in sapien ultrices
+                  viverra vitae vel leo. Curabitur at elit eu risus pharetra pellentesque
+                  at at velit.
                 </p>
             </div>
             
